GeoHashTree with dynamic children and spotless apply